welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:8: error: ')' expected but integer literal found.
  if(b>=1 3&& b<=19) {
          ^countTeen:23: error: illegal start of simple expression
} 
^